classDiagram
    class AuthController {
        - AuthService authService
        + forgotPassword(request: ForgotPasswordRequest): ApiResponse~String~
        + resetPassword(request: ResetPasswordRequest): ApiResponse~String~
    }

    class AuthService {
        <<Interface>>
        + sendResetPasswordOtp(email: String): void
        + resetPassword(email: String, newPassword: String, confirmPassword: String): void
    }

    class AuthServiceImpl {
        - UserRepository userRepository
        - RedisAuthService redisAuthService
        - MailService mailService
        - PasswordEncoder passwordEncoder
        + sendResetPasswordOtp(email: String): void
        + resetPassword(email: String, newPassword: String, confirmPassword: String): void
        - validatePassword(password: String): void
        - generateVerifyToken(): String
    }

    class UserRepository {
        <<Interface>>
        + findByEmail(email: String): Optional~User~
        + save(user: User): User
    }

    class User {
        - UUID id
        - String fullname
        - String email
        - String passwordHash
        - Boolean isActive
        - UserRole role
        + setPasswordHash(passwordHash: String): void
    }

    class RedisAuthService {
        <<Interface>>
        + saveOtp(email: String, otp: String): void
    }

    class MailService {
        <<Interface>>
        + sendVerifyEmailAsync(user: User, template: String, token: String, appUrl: String): void
    }

    class PasswordEncoder {
        <<Interface>>
        + encode(rawPassword: CharSequence): String
    }

    class ForgotPasswordRequest {
        - String email
    }

    class ResetPasswordRequest {
        - String email
        - String newPassword
        - String confirmPassword
    }

    class ApiResponse~T~ {
        - int status
        - String message
        - T data
    }

    AuthController ..> AuthService
    AuthController ..> ForgotPasswordRequest
    AuthController ..> ResetPasswordRequest
    AuthController ..> ApiResponse
    AuthServiceImpl ..|> AuthService
    AuthServiceImpl ..> UserRepository
    AuthServiceImpl ..> RedisAuthService
    AuthServiceImpl ..> MailService
    AuthServiceImpl ..> PasswordEncoder
    UserRepository ..> User
